fix: [PL-29484]: Added z-index on Sub header in connectors and secrets page (#12417)

--- a/src/modules/30-secrets/pages/secrets/SecretsPage.module.scss
+++ b/src/modules/30-secrets/pages/secrets/SecretsPage.module.scss
@@ -13,6 +13,7 @@
   padding: var(--spacing-large) var(--spacing-xlarge) !important;
   background: var(--white) !important;
   border-bottom: 1px solid var(--grey-300);
+  z-index: 1;
 }
 
 :global(.menu-item-label) {
